<resources>
    <string name="app_name">Yemek Bul</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="e_mail">E-mail</string>
    <string name="sifre">Şifre</string>
    <string name="giri">Giriş</string>
    <string name="loginSucces">Giriş Başarılı!\n Hoşgeldin %s</string>
    <string name="emailEmptyErrorMessage">Mail alanı boş bırakılamaz!</string>
    <string name="emailInvalidErrorMessage">Mail geçersiz!</string>
    <string name="passwordInvalidErrorMessage">Parola 8 karakterden küçük olamaz!</string>
    <string name="title_activity_search">SearchActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="allergies">Allergies</string>
    <string name="peanut">Peanut</string>
    <string name="wheat">Wheat</string>
    <string name="shellfish">Shellfish</string>
    <string name="grain">Grain</string>
    <string name="tree_nut">Tree Nut</string>
    <string name="sesame">Sesame</string>
    <string name="gluten">Gluten</string>
    <string name="sulfite">Sulfite</string>
    <string name="seafood">Seafood</string>
    <string name="egg">Egg</string>
    <string name="soy">Soy</string>
    <string name="dairy">Dairy</string>
    <string name="diets">Diets</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="lacto_vegetarian">Lacto-Vegetarian</string>
    <string name="ovo_vegetarian">Ovo-Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="pescetarian">Pescetarian</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="whole30">Whole30</string>
    <string name="use_the_ingredients_in_the_fridge">Use the ingredients in the fridge.</string>
    <string name="cuisines">Cuisines</string>
    <string name="cajun">Cajun</string>
    <string name="middle_eastern">Middle Eastern</string>
    <string name="indian">Indian</string>
    <string name="british">British</string>
    <string name="mexican">Mexican</string>
    <string name="greek">Greek</string>
    <string name="american">American</string>
    <string name="mediterranean">Mediterranean</string>
    <string name="german">German</string>
    <string name="african">African</string>
    <string name="recipes_fragment">Recipes</string>
    <string name="favorite_recipes_fragment">Favorite Recipes</string>
    <string name="shopping_list_fragment">Shopping List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="main_course">Main Course</string>
    <string name="side_dish">Side Dish</string>
    <string name="dessert">Dessert</string>
    <string name="appetizer">Appetizer</string>
    <string name="salad">Salad</string>
    <string name="bread">Bread</string>
    <string name="breakfast">Breakfast</string>
    <string name="soup">Soup</string>
    <string name="beverage">Beverage</string>
    <string name="sauce">Sauce</string>
    <string name="marinade">Marinade</string>
    <string name="fingerfood">Fingerfood</string>
    <string name="snack">Snack</string>
    <string name="drink">Drink</string>

</resources>