<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/allergies">
    </TextView>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="5"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_peanut"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peanut"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_dairy"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dairy"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_soy"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soy"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sesame"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sesame" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_egg"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/egg"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_seafood"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seafood"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sulfite"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sulfite"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_gluten"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gluten"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_treenut"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tree_nut"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_grain"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grain"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_shellfish"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shellfish"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_wheat"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wheat"
            />
    </GridLayout>
</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diets"
        android:gravity="center"
        android:layout_marginTop="10dp">
    </TextView>
    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        >
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_glutenFree"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gluten_free"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ketogenic"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ketogenic"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_vegetarian"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegetarian"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_lactoVegetarian"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lacto_vegetarian" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_ovoVegetarian"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ovo_vegetarian"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_vegan"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vegan"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_pescetarian"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pescetarian"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_paleo"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paleo"
            />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_primal"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/primal"
            />
        <com.google.android.material.chip.Chip
            android:id="@+id/chip_whole30"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/whole30"
            />
    </GridLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cuisines"
            android:gravity="center"
            android:layout_marginTop="10dp">
        </TextView>
        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            >
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_african"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/african"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_german"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/german"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mediterranean"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mediterranean"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_american"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/american" />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_greek"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greek"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_mexican"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mexican"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_british"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/british"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_indian"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/indian"
                />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_middleEastern"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/middle_eastern"
                />
            <com.google.android.material.chip.Chip
                android:id="@+id/chip_cajun"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cajun"
                />
        </GridLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/use_the_ingredients_in_the_fridge"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Search"

        />
    </LinearLayout>


</LinearLayout>

</ScrollView>